deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: broker1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: broker1
    spec:
      containers:
      
      - name: orion1
        image: csp2-centos-1:5000/fiware-orion
        resources:
         limits:
          memory: "1Gi"
          cpu: "1000m"
         requests:
          memory: "500Mi"
          cpu: "500m"
        ports:
        - containerPort: 1027
        args: ["-dbhost", "mongo-1.mongo,mongo-0.mongo,mongo-2.mongo", "-rplSet" ,"rs0", "-logLevel", "DEBUG"]
