ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orion1-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: new.orion.com
    http:
      paths:
        - path: /
          backend:
            serviceName: orion-service
            servicePort: 30190
